--- a/copyBeaker_appCliente/pom.xml
+++ b/copyBeaker_appCliente/pom.xml
@@ -11,4 +11,13 @@
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
     <name>copyBeaker_appCliente</name>
+    
+     <dependencies>
+        <!-- https://mvnrepository.com/artifact/com.github.vbmacher/java-cup-runtime -->
+        <dependency>
+            <groupId>com.github.vbmacher</groupId>
+            <artifactId>java-cup-runtime</artifactId>
+            <version>11b-20160615</version>
+        </dependency>
+    </dependencies>    
 </project>
